--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
   ],
   "require": {
     "php": ">=5.4.0",
-    "codeception/codeception": "^2.5 || ^3.0",
+    "codeception/codeception": "*",
     "spatie/dropbox-api": "^1.0"
   },
   "autoload": {
